--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,33 @@
-<h1><%= current_user.name %></h1>
-<p><%= current_user.password_digest %></p>
-<p><%= "Admin" if current_user.admin %></p>
-<p>Height: <%= current_user.height %></p>
-<p>Mood: <%= current_user.mood %></p>
-<p>Tickets: <%= current_user.tickets %></p>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    <a class="navbar-brand" href="/"/>Home</a>
+    </div>
+    <div class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+          <li><%= link_to "Log Out", signout_path, method: 'DELETE' %></li>
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</div>
 
-<%= form_tag ({controller: 'sessions', action: 'destroy', method: 'delete'}) do %>
-  <%= submit_tag "Log Out" %>
+<% if flash[:notice] %>
+  <div><%= flash[:notice] %></div>
 <% end %>
+
+<h1><%= current_user.name %></h1>
+<p><%= "ADMIN" if current_user.admin %></p>
+
+<% if !current_user.height.blank? %>
+  <p>Height: <%= current_user.height %></p>
+  <p>Mood: <%= current_user.mood %></p>
+  <p>Tickets: <%= current_user.tickets %></p>
+<% end %>
+
+<%= link_to "See attractions", attractions_path %>
